--- a/ADV_C191_1.ipynb
+++ b/ADV_C191_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ADV-C191.1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNCMwCzHFBIZa3WFsgVo7yb",
+      "authorship_tag": "ABX9TyN8HrO6F7hncq2VXcNTszE4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "import pandas as pd \r\n",
         "import matplotlib .pyplot as plt\r\n",
         "\r\n",
-        "dataframe = pd.read_csv(\"https://shravantihable.github.io/AA/AAs/Space_Corrected.csv\")\r\n",
+        "dataframe = pd.read_csv(\"https://shravantihable.github.io/AA/AA's/Space_Corrected.csv\")\r\n",
         "df=dataframe.dropna()\r\n",
         "df\r\n",
         "\r\n",
