--- a/ADV_C191_5.ipynb
+++ b/ADV_C191_5.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C191.5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYM+V/Z48rdHf6xGEe/Lw3",
+      "authorship_tag": "ABX9TyOuv0UnNBVUWaNygng3VTvd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,21 +49,19 @@
         "\r\n",
         "\r\n",
         "#retrive the first row of the dataframe present in the variable sorted_df using the head() function and pass 1 inside the head() function and store this in variable maximum.\r\n",
-        "maximum = sorted_df.head(1)\r\n",
+        "\r\n",
         "\r\n",
         "#retrive the first row of the dataframe present in the variable sorted_df using the tail() function and pass 1 inside the tail() function and store this in variable minimum.\r\n",
-        "minimum = sorted_df.tail(1)\r\n",
         "\r\n",
         "#using the print() function, print the string \"Maximum : \"\r\n",
-        "print(\"Maximum : \")\r\n",
+        "\r\n",
         "#inside the print() function write the string as \"Rocket Name : \" followed by maximum['Status Rocket'], which gives the the status of the mission who's Cost was maximum\r\n",
-        "print(\"Rocket Name : \" , maximum['Status Rocket'])\r\n",
+        "\r\n",
         "\r\n",
         "#using the print() function, print the string \"Minimum : \"\r\n",
-        "print(\"Minimum : \")\r\n",
         "\r\n",
-        "#inside the print() function write the string as \"Rocket Name : \" followed by minimum['Status Rocket'], which gives the the status of the mission who's Cost was minimum\r\n",
-        "print(\"Rocket Name : \" , minimum['Status Rocket'])"
+        "\r\n",
+        "#inside the print() function write the string as \"Rocket Name : \" followed by minimum['Status Rocket'], which gives the the status of the mission who's Cost was minimum\r\n"
       ],
       "execution_count": null,
       "outputs": []
