--- a/ADV_C191_2(Solution).ipynb
+++ b/ADV_C191_2(Solution).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ADV_C191.2(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBGBR/q1WdtG18k1uUhDjH",
+      "authorship_tag": "ABX9TyMs6Ze3WvLicWODAqpSuz2R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,11 +70,11 @@
         "#plot the bar graph using the plt.bar() function. And set the parameters of the plt.bar() function in the given order:\r\n",
         "#label\r\n",
         "#value\r\n",
-        "#width=0.4\r\n",
-        "#color=('red','blue','green','pink','yellow')\r\n",
+        "#set width\r\n",
+        "#set colors as per your choice\r\n",
         "plt.bar(label, value,width=0.4, color=('red','blue','green','pink','yellow')) #bar-grap"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
