--- a/ADV_C191_2.ipynb
+++ b/ADV_C191_2.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C191.2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZVKs1CdGXI+XgoGKLtpbf",
+      "authorship_tag": "ABX9TyP5l0nMwVY3BEyvbiFwk98x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,8 +66,8 @@
         "#plot the bar graph using the plt.bar() function. And set the parameters of the plt.bar() function in the given order:\r\n",
         "#label\r\n",
         "#value\r\n",
-        "#width=0.4\r\n",
-        "#color=('red','blue','green','pink','yellow')\r\n",
+        "#set width\r\n",
+        "#set color as per your choice\r\n",
         "#bar-grap"
       ],
       "execution_count": null,
