--- a/ADV_C191_3(Solution).ipynb
+++ b/ADV_C191_3(Solution).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ADV-C191.3(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHZlNFMCPY5ipLA5DE9Pm7",
+      "authorship_tag": "ABX9TyMrc+F1FdBkJKtrlNrLCBj5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "df=dataframe.dropna()\r\n",
         "df\r\n",
         "\r\n",
-        "#to rename the column \"Rocket\" to \"Cost_Of_Mission\", use the function df.rename() and inside this function set the columns parameter as {\"Rockets\":\"Cost_Of_Mission\"}.\r\n",
+        "#to rename the column \"Rocket\" to \"Cost_Of_Mission\", use the function df.rename() and inside this function set the columns parameter as {\" Rockets\":\"Cost_Of_Mission\"}(there should be extra space before \"Rockets\" in double quotes like this \" Rockets\" because the column name has extra space).\r\n",
         "#this will rename the column name \"Rocket\" to \"Cost_Of_Mission\".And store it in a variable new.\r\n",
         "new = df.rename(columns={\" Rocket\": \"Cost_Of_Mission\"})\r\n",
         "\r\n",
@@ -55,7 +55,7 @@
         "#call the sorted_df variable\r\n",
         "sorted_df"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
