--- a/ADV_C190_3(Solution).ipynb
+++ b/ADV_C190_3(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C190.3(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNpBwPcaJXaHRxGKnhJJfmt",
+      "authorship_tag": "ABX9TyP9Bzevt2Cciy14s70smyr2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,12 +55,13 @@
         "#retrive the values of the column 'Launch Vehicle' which is present in the least_heavy_5 and store it in list using the tolist() function annd store it in variable launch_vehicle .\r\n",
         "launch_vehicle = least_heavy_5['Launch Vehicle'].tolist()\r\n",
         "\r\n",
+        "\r\n",
         "#print the variable mass which contains the list of vehical mass present in the Launch Mass column.\r\n",
         "print(mass)\r\n",
-        "#print the variable mass which contains the list of vehicals present in the Launch Vehicle column.\r\n",
+        "#print the variable launch_vehicle which contains the list of vehicals present in the Launch Vehicle column.\r\n",
         "print(launch_vehicle)\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
