--- a/ADV_C190_1.ipynb
+++ b/ADV_C190_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C190.1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLuM3Lp0JKZ2XpNeS/DHzH",
+      "authorship_tag": "ABX9TyN78A24oPyya2iXEQ+pbszE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       },
       "source": [
         "#Additional-Activity-1\r\n",
-        "#The \"raw.csv\" file is sorted in descending order\r\n",
+        "#The \"Launch_Date.csv\" file is sorted in descending order\r\n",
         "#So read the CSV and get the name and date of the Satellites which was launched recently\r\n",
         "\r\n",
         "#predefine code\r\n",
