--- a/ADV_C190_2.ipynb
+++ b/ADV_C190_2.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C190.2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKQsLo4bW3gXeoyOizwRNH",
+      "authorship_tag": "ABX9TyNnDTzWyVy6jE8XkM9Eq5Z2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       },
       "source": [
         "#Additional-Activity-2\r\n",
-        "#The \"raw.csv\" file is sorted in descending order\r\n",
+        "#The  \"Launch_Date.csv\" file is sorted in descending order\r\n",
         "#So read the CSV and get the name and date of the Satellites which was launched earliest\r\n",
         "\r\n",
         "#predefine code\r\n",
