--- a/ADV_C190_2(Solution).ipynb
+++ b/ADV_C190_2(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C190.2(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNG7eI3x2xu66SIlESgTfQW",
+      "authorship_tag": "ABX9TyM8jkC7QcOGbjyxMYIk+e3W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       },
       "source": [
         "#Additional-Activity-2\r\n",
-        "#The \"raw.csv\" file is sorted in descending order\r\n",
+        "#The  \"Launch_Date.csv\" file is sorted in descending order\r\n",
         "#So read the CSV and get the name and date of the Satellites which was launched earliest\r\n",
         "\r\n",
         "#predefine code\r\n",
@@ -58,7 +58,7 @@
         "#inside the print() function write the string \"Satellites had launched\" to indicate that this satalite had launched recently.\r\n",
         "print(\"Satellites had launched\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
