--- a/ADV_C190_3.ipynb
+++ b/ADV_C190_3.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C190.3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0TmQWCgkLuPDaZmnHW8bN",
+      "authorship_tag": "ABX9TyOOjo06OTycUcRHpNvgxwZw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,10 +45,10 @@
         "#from the dataframe df retrive the first five rows using the head() function and store it in variable recent_satellites least_heavy_5\r\n",
         "\r\n",
         "\r\n",
-        "#retrive the values of the column 'Launch Mass' which is present in the least_heavy_5 and store it in list using the tolist() function annd store it in variable mass.\r\n",
+        "#retrive the values of the column 'Launch Mass' which is present in the least_heavy_5. And convert it into list using tolist() function and store it in a in variable mass.\r\n",
         "\r\n",
         "\r\n",
-        "#retrive the values of the column 'Launch Vehicle' which is present in the least_heavy_5 and store it in list using the tolist() function annd store it in variable launch_vehicle .\r\n",
+        "#retrive the values of the column 'Launch Vehicle' which is present in the least_heavy_5. And convert it into list using tolist() function and store it in a in variable launch_vehicle.\r\n",
         "\r\n",
         "\r\n",
         "#print the variable mass which contains the list of vehical mass present in the Launch Mass column.\r\n",
