--- a/ADV_C190_3(Solution).ipynb
+++ b/ADV_C190_3(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C190.3(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9Bzevt2Cciy14s70smyr2",
+      "authorship_tag": "ABX9TyOJsf9hwrfoaNjewX6Cdi4s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,16 +49,15 @@
         "#from the dataframe df retrive the first five rows using the head() function and store it in variable recent_satellites least_heavy_5\r\n",
         "least_heavy_5 = df.head(5)\r\n",
         "\r\n",
-        "#retrive the values of the column 'Launch Mass' which is present in the least_heavy_5 and store it in list using the tolist() function annd store it in variable mass.\r\n",
+        "#retrive the values of the column 'Launch Mass' which is present in the least_heavy_5. And convert it into list using tolist() function and store it in a in variable mass.\r\n",
         "mass = least_heavy_5['Launch Mass'].tolist()\r\n",
         "\r\n",
-        "#retrive the values of the column 'Launch Vehicle' which is present in the least_heavy_5 and store it in list using the tolist() function annd store it in variable launch_vehicle .\r\n",
+        "#retrive the values of the column 'Launch Vehicle' which is present in the least_heavy_5.And convert it into list using tolist() function and store it in a in variable launch_vehicle.\r\n",
         "launch_vehicle = least_heavy_5['Launch Vehicle'].tolist()\r\n",
-        "\r\n",
         "\r\n",
         "#print the variable mass which contains the list of vehical mass present in the Launch Mass column.\r\n",
         "print(mass)\r\n",
-        "#print the variable launch_vehicle which contains the list of vehicals present in the Launch Vehicle column.\r\n",
+        "#print the variable mass which contains the list of vehicals present in the Launch Vehicle column.\r\n",
         "print(launch_vehicle)\r\n"
       ],
       "execution_count": null,
