--- a/ADV_C190_5.ipynb
+++ b/ADV_C190_5.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ADV-C190.5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHvoZoZJeV16eAbvuiBx6N",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyO7esFoSKPaVPuqOhb4X5MY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,33 +44,33 @@
         "\r\n",
         "\r\n",
         "#from the dataframe df retrive the last five rows using the tail() function and store it in variable heaviest_5.\r\n",
-        "heaviest_5 = df.tail(5)\r\n",
+        "\r\n",
         "#retrive the values of the column 'Launch Mass' which is present in the heaviest_5 variable and store it in variable mass.\r\n",
-        "mass = heaviest_5['Launch Mass']\r\n",
+        "\r\n",
         "#retrive the values of the column 'Launch Vehicle' which is present in the heaviest_5 variable and store it in variable launch_vehicle .\r\n",
-        "launch_vehicle = heaviest_5['Launch Vehicle']\r\n",
+        "\r\n",
         "#print the variable mass which contains the vehical mass.\r\n",
-        "print(mass)\r\n",
+        "\r\n",
         "#print the variable launch_vehicle which contains vehicals details\r\n",
-        "print(launch_vehicle)\r\n",
+        "\r\n",
         "\r\n",
         "# give the name to the x axis as \"Launch Vehicle\" using the plt.xlabel() function.\r\n",
-        "plt.xlabel(\"Launch Vehicle\")\r\n",
+        "\r\n",
         "#to make the xlabels appear vertically, set the rotation as 'vertical' using the plt.xticks() function.\r\n",
-        "plt.xticks(rotation='vertical')\r\n",
+        "\r\n",
         "#give the name to the y axis as \"Launch Mass\" using the plt.ylabel() function.\r\n",
-        "plt.ylabel(\"Launch Mass\")\r\n",
+        "\r\n",
         "\r\n",
         "#define a variable label and inside it store the launch_vehicle variable which holds the vehical details\r\n",
-        "label = launch_vehicle\r\n",
+        "\r\n",
         "#define a variable value and inside it store the mass variable which holds the vehical mass\r\n",
-        "value = mass \r\n",
+        "\r\n",
         "#plot the bar graph using the plt.bar() function. And set the parameters of the plt.bar() function in the given order:\r\n",
         "#label\r\n",
         "#value\r\n",
         "#width\r\n",
         "#color\r\n",
-        "plt.bar(label, value,width=0.4, color=('red','blue','green','pink','yellow')) #bar-grap"
+        "#bar-grap"
       ],
       "execution_count": null,
       "outputs": []
