--- a/ADV_C194_1(Solution).ipynb
+++ b/ADV_C194_1(Solution).ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ADV_C194.1(Solution).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPmWwq6MPcAZbI9LqcCKo1U",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNE766/ppULNWoVD3vi8+pB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +44,7 @@
         "df = pd.read_csv('https://shravantihable.github.io/AA/movie_update.csv')\r\n",
         "df\r\n",
         "#predefined code end\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
         "\r\n",
         "#to count the total number of movies access the 'ID' column present in df dataframe, by passing 'ID' as the index to the dataframe df, followed by '.' dot operator followed by count() function and store it inside the variable total_movies. \r\n",
         "total_movies = df['ID'].count()\r\n",
@@ -56,7 +58,7 @@
         "#now print the string \"Total Netflix Movies - \" followed by comma ',' followed by variable total_netflix_movies.\r\n",
         "print(\"Total Netflix Movies - \", total_netflix_movies)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
