--- a/ADV_C194_1.ipynb
+++ b/ADV_C194_1.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C194.1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOlO1Se+vMX+xJKqn91ME28",
+      "authorship_tag": "ABX9TyOBGr9wKlI4bP2pihStWTmA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,18 +28,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qnEWLpYfgYJ7"
+        "id": "qnEWLpYfgYJ7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 796
+        },
+        "outputId": "a88e2b5c-4106-46bb-f99c-1eebc34ccd14"
       },
       "source": [
         "#Additional-Activty-1\r\n",
         "# count the total movies and total Netflix movies from the dataset.\r\n",
         "#predefine code\r\n",
+        "\r\n",
         "import pandas as pd\r\n",
         "import matplotlib.pyplot as plt\r\n",
         "\r\n",
         "df = pd.read_csv('https://shravantihable.github.io/AA/movie_update.csv')\r\n",
         "df\r\n",
         "#predefined code end\r\n",
+        "\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
         "\r\n",
         "#to count the total number of movies access the 'ID' column present in df dataframe, by passing 'ID' as the index to the dataframe df, followed by '.' dot operator followed by count() function and store it inside the variable total_movies. \r\n",
         "\r\n",
@@ -52,8 +60,298 @@
         "\r\n",
         "#now print the string \"Total Netflix Movies - \" followed by comma ',' followed by variable total_netflix_movies.\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Title</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>IMDb</th>\n",
+              "      <th>Rotten Tomatoes</th>\n",
+              "      <th>Netflix</th>\n",
+              "      <th>Hulu</th>\n",
+              "      <th>Prime Video</th>\n",
+              "      <th>Disney+</th>\n",
+              "      <th>Type</th>\n",
+              "      <th>Directors</th>\n",
+              "      <th>Genres</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>Language</th>\n",
+              "      <th>Runtime</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Inception</td>\n",
+              "      <td>2010</td>\n",
+              "      <td>13+</td>\n",
+              "      <td>8.8</td>\n",
+              "      <td>87%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Christopher Nolan</td>\n",
+              "      <td>Action,Adventure,Sci-Fi,Thriller</td>\n",
+              "      <td>United States,United Kingdom</td>\n",
+              "      <td>English,Japanese,French</td>\n",
+              "      <td>148.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>The Matrix</td>\n",
+              "      <td>1999</td>\n",
+              "      <td>18+</td>\n",
+              "      <td>8.7</td>\n",
+              "      <td>87%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Lana Wachowski,Lilly Wachowski</td>\n",
+              "      <td>Action,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>136.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Avengers: Infinity War</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>13+</td>\n",
+              "      <td>8.5</td>\n",
+              "      <td>84%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Anthony Russo,Joe Russo</td>\n",
+              "      <td>Action,Adventure,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>149.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Back to the Future</td>\n",
+              "      <td>1985</td>\n",
+              "      <td>7+</td>\n",
+              "      <td>8.5</td>\n",
+              "      <td>96%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Robert Zemeckis</td>\n",
+              "      <td>Adventure,Comedy,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>116.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4</td>\n",
+              "      <td>5</td>\n",
+              "      <td>The Good, the Bad and the Ugly</td>\n",
+              "      <td>1966</td>\n",
+              "      <td>18+</td>\n",
+              "      <td>8.8</td>\n",
+              "      <td>97%</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Sergio Leone</td>\n",
+              "      <td>Western</td>\n",
+              "      <td>Italy,Spain,West Germany</td>\n",
+              "      <td>Italian</td>\n",
+              "      <td>161.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16739</th>\n",
+              "      <td>16739</td>\n",
+              "      <td>16740</td>\n",
+              "      <td>The Ghosts of Buxley Hall</td>\n",
+              "      <td>1980</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.2</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Bruce Bilson</td>\n",
+              "      <td>Comedy,Family,Fantasy,Horror</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>120.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16740</th>\n",
+              "      <td>16740</td>\n",
+              "      <td>16741</td>\n",
+              "      <td>The Poof Point</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>7+</td>\n",
+              "      <td>4.7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Neal Israel</td>\n",
+              "      <td>Comedy,Family,Sci-Fi</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>90.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16741</th>\n",
+              "      <td>16741</td>\n",
+              "      <td>16742</td>\n",
+              "      <td>Sharks of Lost Island</td>\n",
+              "      <td>2013</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Neil Gelinas</td>\n",
+              "      <td>Documentary</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16742</th>\n",
+              "      <td>16742</td>\n",
+              "      <td>16743</td>\n",
+              "      <td>Man Among Cheetahs</td>\n",
+              "      <td>2017</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Richard Slater-Jones</td>\n",
+              "      <td>Documentary</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16743</th>\n",
+              "      <td>16743</td>\n",
+              "      <td>16744</td>\n",
+              "      <td>In Beaver Valley</td>\n",
+              "      <td>1950</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>James Algar</td>\n",
+              "      <td>Documentary,Short,Family</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>English</td>\n",
+              "      <td>32.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>16744 rows × 17 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Unnamed: 0     ID  ...                 Language  Runtime\n",
+              "0               0      1  ...  English,Japanese,French    148.0\n",
+              "1               1      2  ...                  English    136.0\n",
+              "2               2      3  ...                  English    149.0\n",
+              "3               3      4  ...                  English    116.0\n",
+              "4               4      5  ...                  Italian    161.0\n",
+              "...           ...    ...  ...                      ...      ...\n",
+              "16739       16739  16740  ...                  English    120.0\n",
+              "16740       16740  16741  ...                  English     90.0\n",
+              "16741       16741  16742  ...                  English      NaN\n",
+              "16742       16742  16743  ...                  English      NaN\n",
+              "16743       16743  16744  ...                  English     32.0\n",
+              "\n",
+              "[16744 rows x 17 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     }
   ]
 }
