--- a/ADV_C194_2.ipynb
+++ b/ADV_C194_2.ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C194.2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDuJTGUX/XW+5I5FgtGLNq",
+      "authorship_tag": "ABX9TyNsKEHHe8whtkRvwF1Hpg0+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_gegmOosk_lp"
+        "id": "_gegmOosk_lp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e137aba8-eed8-478d-d66f-8536e97f6254"
       },
       "source": [
         "#Additional-Activty-2\r\n",
         "\r\n",
-        "#Plot a pie chart as per the genre and fetch which category of movie to make for making the maximum profit\r\n",
+        "#Plot a pie chart to show out of how many movies are there on netflix as compare to the total number of movies\r\n",
         "#predefine code \r\n",
         "\r\n",
         "import pandas as pd\r\n",
@@ -49,6 +53,7 @@
         "total_netflix_movies = total_netflix_movies['ID'].count()\r\n",
         "print(\"Total Netflix Movies - \", total_netflix_movies)\r\n",
         "#predefine code end\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
         "\r\n",
         "#to plot the pie chart first define a variable value, and inside it store the variables total_movies,total_netflix_movies holding the total number of movies and total number of netflix movies inside the square brackets.\r\n",
         "\r\n",
@@ -62,8 +67,17 @@
         "\r\n",
         "plt.show()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Total Movies -  16744\n",
+            "Total Netflix Movies -  3560\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
