--- a/ADV_C194_2(Solution).ipynb
+++ b/ADV_C194_2(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C194.2(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMNefdOLpBGQ5KHxEbd7AG+",
+      "authorship_tag": "ABX9TyNQEnP1US3TeRA6aRIALW70",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
       "source": [
         "#Additional-Activty-2\r\n",
         "\r\n",
-        "#Plot a pie chart as per the genre and fetch which category of movie to make for making the maximum profit\r\n",
+        "#Plot a pie chart to show out of how many movies are there on netflix as compare to the total number of movies\r\n",
         "#predefine code \r\n",
         "\r\n",
         "import pandas as pd\r\n",
@@ -54,6 +54,7 @@
         "total_netflix_movies = total_netflix_movies['ID'].count()\r\n",
         "print(\"Total Netflix Movies - \", total_netflix_movies)\r\n",
         "#predefine code end\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
         "\r\n",
         "#to plot the pie chart first define a variable value, and inside it store the variables total_movies,total_netflix_movies holding the total number of movies and total number of netflix movies inside the square brackets.\r\n",
         "value = [total_movies,total_netflix_movies]\r\n",
@@ -67,7 +68,7 @@
         "plt.pie(value,labels=label, autopct='%0.1f%%', radius=2)\r\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
