--- a/ADV_C194_3(Solution).ipynb
+++ b/ADV_C194_3(Solution).ipynb
@@ -6,7 +6,7 @@
       "name": "ADV_C194.3(Solution).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNpcHZyvNyDNCT3mW2LVVFw",
+      "authorship_tag": "ABX9TyMgWJhdTWIvY0133TIa/V2X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,14 @@
       },
       "source": [
         "#Additional-Activty-3\r\n",
-        "#Get the total number of movies based on the coountries\r\n",
+        "#Get the total number of movies based on the countries\r\n",
         "#predefine code\r\n",
         "import pandas as pd\r\n",
         "import matplotlib.pyplot as plt\r\n",
         "df = pd.read_csv('https://shravantihable.github.io/AA/movie_update.csv')\r\n",
         "df\r\n",
         "#predefine code end\r\n",
+        "#Press shift + enter to run the cell and check what columns are there in dataframe\r\n",
         "\r\n",
         "#using the df.groupby() function, group the values of the 'Country' column to get the total movies based on the country, then add a column 'Title' inside the square brackets and apply the count function on it, and reset the index to 0 and store it in variable group_by_country.\r\n",
         "group_by_country = df.groupby('Country')['Title'].count().reset_index()\r\n",
@@ -54,7 +55,7 @@
         "#print the variable sorted_df\r\n",
         "sorted_df\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
